# BE_REPO

./: .env.example  .init-letsencrypt.sh  LICENSE  README.md  docker-compose.yml  github-actions.docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: CD.yml  CI.yml
config/: root_urls.py
config/django/: base.py  dev.py  local.py
config/settings/: celery.py  files_and_storages.py  jwt.py
config/settings/swagger/: setup.py
jurin/authentication/: apis.py  apps.py  jwt_claim_serializer.py  services.py  urls.py
jurin/channels/: admin.py  apps.py  models.py  services.py  tasks.py
jurin/channels/migrations/: 0001_initial.py  0002_initial.py  0003_channel_market_closing_at_channel_market_opening_at.py
jurin/channels/selectors/: channels.py  user_channels.py
jurin/channels/students/: apis.py  urls.py
jurin/channels/teachers/: apis.py  urls.py
jurin/common/: apps.py  permissions.py
jurin/common/base/: serializers.py
jurin/common/exception/: exception_handler.py  exceptions.py
jurin/files/: apps.py  services.py
jurin/files/teachers/: apis.py  urls.py
jurin/items/: admin.py  apps.py  models.py  services.py
jurin/items/migrations/: 0001_initial.py  0002_initial.py  0003_item_deleted_at_item_is_deleted.py  (+2 more)
jurin/items/selectors/: items.py  user_items.py  (+1 more)
jurin/posts/: admin.py  apps.py  models.py  services.py
jurin/stocks/: admin.py  apps.py  models.py  services.py  tasks.py
jurin/tasks/: apps.py  celery.py
jurin/users/: admin.py  apis.py  apps.py  enums.py  managers.py  models.py  services.py  tasks.py  urls.py
nginx/: default.conf
(+31 files in other folders)
